<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:fitsSystemWindows="true">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:layout_width="0dp" android:layout_height="?attr/actionBarSize" android:background="?attr/colorSurface" app:title="@string/choose_installed_app" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/searchInputLayout" style="@style/Widget.Material3.TextInputLayout.OutlinedBox" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="@dimen/content_horizontal_padding" android:layout_marginEnd="@dimen/content_horizontal_padding" android:layout_marginTop="@dimen/spacing_sm" android:hint="@string/search_apps" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/searchInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text" android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@+id/pickerEmptyState" android:layout_width="0dp" android:layout_height="wrap_content" android:gravity="center" android:padding="@dimen/spacing_xl" android:text="@string/no_apps_found" android:textAppearance="?attr/textAppearanceBodyLarge" android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/searchInputLayout" />
    <ListView android:id="@+id/appsList" android:layout_width="0dp" android:layout_height="0dp" android:clipToPadding="false" android:divider="@android:color/transparent" android:dividerHeight="8dp" android:paddingStart="@dimen/content_horizontal_padding" android:paddingEnd="@dimen/content_horizontal_padding" android:paddingTop="@dimen/spacing_md" android:paddingBottom="@dimen/spacing_lg" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/searchInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
